--- a/meuImovel/.env.example
+++ b/meuImovel/.env.example
@@ -1,17 +1,26 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:RpDDNVJOdtkfOVgYWQ5KZrDcUz3/jyozX2mmwllK5kk=
+APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
+-------------------------------------
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=teste
+DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=
+-------------------------------------
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=meu_imovel
+DB_USERNAME=root
+DB_PASSWORD=
+--------------------------------------
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
